style.css
html {
    height: 100%;
}

body {
    background: #fff9fc;
    font-family: 'Arapey', serif;
    color: #2c2c2c;
    padding-top: 2%;
    height: 100%;
}

.navbar-brand {
    font-size: 2rem;
}

.nav-item {
    font-size: 1.5rem;
}

#page-content {
    flex: 1 0 auto;
}

img {
    width: 100%;
}

.text-large {
    font-size: 1.2rem;
}

.pb-3 {
    padding-bottom: 30px!important;
}

#sticky-footer {
    flex-shrink: none;
}

#navbarNav {
    padding-left: 1.5rem;
}

.navbar-light .navbar-brand {
    color: #2c2c2c;
}

#baguetteBox-overlay {
    background-color:rgba(255,249,252,.9)!important;
}

#baguetteBox-overlay .full-image img {
    max-width: 98%!important;
    max-height: 85%!important;
    box-shadow: none!important;
}

#baguetteBox-overlay .full-image figcaption {
    bottom: auto!important;
    background-color: rgba(255,249,252,0)!important;
    font-family: 'Arapey', serif!important;
    color: #2c2c2c!important;
    line-height: 1.4!important;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: 0.5rem;
    padding-bottom: 1rem;
}

#baguetteBox-overlay .full-image figcaption br {
    line-height: 20%!important;
}

